# tmpTest

./: CMakeLists.txt  README.md  bmp.c  common.h  main.cpp  各模块接口说明.docx
FPGA/: CMakeLists.txt  fpga.cpp  fpga.h
common/: CMakeLists.txt  common.cpp  common.h
drivers/: fpga_enc.c  fpga_enc.h  spi_lcd12864.c  spi_lcd12864.h
key/: CMakeLists.txt  Key.cpp  Key.h  key.h
lcd/: CMakeLists.txt  lcd.cpp  lcd.h
led/: CMakeLists.txt  Led.cpp  Led.h
usbdetect/: CMakeLists.txt  UsbDetector.cpp  UsbDetector.h
